calculator is ready, needs validations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <h2>
     Mami ababay in obaba
   </h2>
+  Revenue
+  <input type="text" id="revenue">
+  <br/><br/>
   <input type="button" value="+" onclick="addLalala();">
   <input type="button" value="Calculate" onclick="calculate();">
   <table id="lalalaTable">
@@ -33,6 +36,12 @@
       </td>
     </tr>
   </table>
+  <br/>
+  <tr>
+    <td>
+      Duration of Intermissions = <input type="text" id="intermissions">min
+    </td>
+  </tr>
   <hr style="width:65%;text-align:left;margin-left:0">
 
 
@@ -47,6 +56,12 @@
     <td>&nbsp;&nbsp;&nbsp;</td>
     <td>
       Protected Ratio = <input type="text" readonly=true id="protected_ratio" class="input-output ratio">%
+    </td>
+  </tr>
+  <br/><br/>
+  <tr>
+    <td>
+      Result = <input type="text" readonly=true id="result" class="input-output ratio">
     </td>
   </tr>
 
