added defalut zeros

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Mami ababay in obaba
   </h2>
   Revenue
-  <input type="text" id="revenue">
+  <input type="text" id="revenue" value="0" onchange="calculate()">
   <br/><br/>
   <input type="button" value="+" onclick="addLalala();">
   <input type="button" value="Calculate" onclick="calculate();">
@@ -39,7 +39,7 @@
   <br/>
   <tr>
     <td>
-      Duration of Intermissions = <input type="text" id="intermissions">min
+      Duration of Intermissions = <input type="text" id="intermissions" value="0" onchange="calculate();">min
     </td>
   </tr>
   <hr style="width:65%;text-align:left;margin-left:0">
